# AI-local-route-planne

./: .env.example  .gitignore  .run-backend-current.txt  LICENSE  README.md  agent_tech_planning_requirements.md  design-qa.md  docker-compose.yml  new_agent_route_planning_solution.md  开发框架_Cowork交付文档.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  runner.py
backend/amap_poi_route_demo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  cache_backend.py  config.py  main.py
backend/app/agent/: __init__.py  conductor.py  session_summarizer.py  state.py  store.py  story_models.py  tool_schemas.py  tools.py  tracing.py  user_memory.py
backend/app/api/: route.py  routes_agent.py  routes_chat.py  routes_meta.py  routes_onboarding.py  routes_plan.py  routes_pool.py  routes_replan.py  routes_route.py  routes_trips.py  routes_ugc.py
backend/app/llm/: cache.py  client.py  embedding.py
backend/app/ml/: features.py  ranker.py
backend/app/models/: __init__.py  poi.py  ugc.py  user_profile.py
backend/app/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/app/repositories/: embedding_cache.py  faiss_index.py  faiss_meta.py  poi_repo.py  rag_build.py  rag_index.py  seed_data.py  session_vector_repo.py  sqlite_poi_repo.py  trip_store.py  ugc_vector_repo.py  vector_repo.py
backend/app/schemas/: __init__.py  chat.py  common.py  onboarding.py  plan.py  poi.py  pool.py  preferences.py  rag.py  route.py  trip.py  ugc.py  (+1 more)
backend/eval/: metrics.py  run_eval.py
backend/scripts/: __init__.py
backend/tests/: conftest.py  test_agent_eval.py  test_agent_harness_mvp.py  test_agent_memory_e2e.py  test_agent_minimal_flow.py  test_agent_performance_flow.py  test_agent_quality.py  test_agent_skill_registry.py  test_agent_snapshots.py  test_agent_solver_tool.py  test_agent_stage3.py  test_agent_stage4.py  test_agent_store.py  test_agent_store_compat.py  test_agent_tracing.py  test_amap_and_ordering.py  test_amap_client.py  test_amap_polyline.py  test_amap_route_chain_api.py  test_amap_route_client.py  test_bench_latency_report.py  test_build_poi_sqlite.py  test_business_demo_readiness.py  test_cache_strategy.py  test_constraint_diversity_balance.py  test_db_retrieval_followup.py  test_demo_flow.py  test_embed_ugc_script.py  test_episodic_memory.py  test_eval_metrics.py  test_instant_route_preferences.py  test_llm_mimo_integration.py  test_montecarlo.py  test_multitype_rag_recall.py  test_observability.py  test_optw_solver.py  test_pareto.py  test_policy_helpers.py  test_pool_retrieval_optimization.py  test_product_demo_readiness.py  (+15 more)
(+267 files in other folders)
