[project]
name = "local-route-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the AI local route planning demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
