[project]
name = "local-route-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the AI local route planning demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "cachetools>=5.3.0",
  "prometheus-client>=0.20.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "structlog>=24.1.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "syrupy>=4.6.1",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
files = ["app"]
exclude = ["tests/", "scripts/"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
